# html5ever_elixir

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  mix.exs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust-ci.yml
config/: config.exs
lib/: ex_html5ever.ex  html5ever.ex
lib/ex_html5ever/: native.ex
lib/html5ever/: native.ex  precompiled.ex
lib/mix/tasks/: rustler.download.ex
native/html5ever_nif/: Cargo.toml
native/html5ever_nif/.cargo/: config  config.toml
native/html5ever_nif/src/: arena_sink.rs  common.rs  flat_dom.rs  lib.rs  rc_dom.rs
priv/test_data/: dailymail.html  drudgereport.html  drudgereport_slim.html
test/: ex_html5ever_test.exs  html5ever_test.exs
test/html5ever/: precompiled_test.exs
