[package]
name = "html5ever_nif"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
edition = "2021"

[lib]
name = "html5ever_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# See the Precompilation guide for details about the features: https://github.com/philss/rustler_precompiled/blob/main/PRECOMPILATION_GUIDE.md
rustler = { version = "0.36", default-features = false, features = ["nif_version_2_15"] }

html5ever = "0.35"
markup5ever = "0.12"

tendril = "0.4"
lazy_static = "1.5"

thiserror = "2"
