[package]
name = "html5ever_nif"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
edition = "2024"

[lib]
name = "html5ever_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# See the Precompilation guide for details about the features: https://github.com/philss/rustler_precompiled/blob/main/PRECOMPILATION_GUIDE.md
rustler = "0.37"

html5ever = "0.27"
markup5ever = "0.39"

tendril = "0.4"

thiserror = "2"
