[package]
name = "html5ever_nif"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
edition = "2024"

[lib]
name = "html5ever_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"

html5ever = "0.39"
markup5ever = "0.39"

tendril = "0.5"

thiserror = "2"

typed-arena = "2"
